# blueprint

./: README.md  pyproject.toml  setup.cfg
.todo/: done.txt  todo.txt  todo.txt.bak
blueprint/: __init__.py  app.py  cli.py  project.py  project_factory.py  python_project.py  shell_command.py
commands/python/: pyversion
new_project/: __init__.py  app.py  cli.py  project.py  python_project.py
sources/bare/: README.md
sources/python/: .flake8  _pyproject.toml  setup.cfg
sources/python-cli/${SNAKE_NAME}/: cli.py
sources/python/${SNAKE_NAME}/: __init__.py
sources/python/tests/: test_${SNAKE_NAME}.py
tests/: conftest.py  test_app.py  test_attr.py  test_blueprint.py  test_cli.py  test_new_project.py  test_project.py  test_project_factory.py  test_python_project.py  test_shell_command.py
