[tool.poetry]
name = "blueprint"
version = "0.0.1"
description = ""
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
readme = "README.md"
packages = [{include = "blueprint"}]

[tool.poetry.dependencies]
python = ">=3.10"
typer = "^0.9.0"
rich = "^13.7.1"
more-itertools = "^10.2.0"
GitPython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pdbpp = "^0.10.3"
ipython = "^8.22.2"
black = "^24.2.0"
pynvim = "^0.5.0"
pycodestyle = "^2.11.1"
flake8 = "^7.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.1"
flake8-docstrings = "^1.7.0"
pylama = "^8.4.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vvx"

[tool.black]
line-length = "88"

[tool.poetry.scripts]
init = "blueprint.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
